--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -24,7 +24,7 @@
   <%= javascript_include_tag 'mobile', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%= @controller %> <%= @action %>">
 
   <%= yield %>
 
