--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -24,28 +24,25 @@
       <%= f.text_field :geo, class: "form-control" %>
     </div>
   </div>
+
   <div class="form-group">
     <%= f.label :claim_type, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :claim_type, class: "form-control" %>
+      <%= f.select :claim_type, options_for_select(Task.claim_types), {}, class: "form-control" %>
     </div>
   </div>
+
   <div class="form-group">
     <%= f.label :image, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :image, class: "form-control" %>
     </div>
   </div>
-  <div class="form-group">
-    <%= f.label :draft, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :draft, class: "form-control" %>
-    </div>
-  </div>
+  
   <div class="form-group">
     <%= f.label :hunt_id, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.number_field :hunt_id, class: "form-control" %>
+      <%= f.select :hunt_id, options_for_select(Task.hunt_options), {}, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
