--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,3 +1,11 @@
+<style>
+  #map {
+    width: 500px;
+    height: 400px;
+    background-color: #CCC;
+  }
+</style>
+
 <%= form_for(@task, html: { class: "form-horizontal", role: "form" }) do |f| %>
   <% if @task.errors.any? %>
     <div class="alert alert-danger alert-dismissable" role="alert">
@@ -25,6 +33,8 @@
     </div>
   </div>
 
+  <div id="map"></div>
+
   <div class="form-group">
     <%= f.label :claim_type, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
@@ -51,3 +61,20 @@
     </div>
   </div>
 <% end %>
+
+<script type="text/javascript">
+  function initMap() {
+    var mapDiv = document.getElementById('map');
+    var map = new google.maps.Map(mapDiv, {
+      center: {lat: 44.540, lng: -78.546},
+      zoom: 8
+    });
+  }
+  
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClG3delsA9nPWuaYzJ_XJXYDyK8W4-Uc0&amp;callback=initMap" async defer></script>
+
+
+
+
