--- a/app/views/dashboard/landing_page.html.erb
+++ b/app/views/dashboard/landing_page.html.erb
@@ -1,5 +1,15 @@
-<%= render 'partials/header' %>
+<div class="content-padded">
 
-<div class="content">
-  <a href="<%= signin_path %>" class="btn btn-primary btn-block">Signup with Facebook</a>
+  <div class="container__body">
+    <img class="background-image" src="http://i.imgur.com/3oreVS5.jpg" />
+    <h1>GardenHunt</h1>
+    <h2>Lorem ipsum dolor sit amet</h2>
+  </div>
+
+  <div class="container__foot">
+    <a href="<%= signin_path %>" class="btn btn-primary btn-block login" data-ignore="push">
+      <i class="fa fa-facebook-official"></i>
+      Signup with Facebook
+    </a>
+  </div>
 </div>
