work in progress on the hunt page and pulling up tasks

--- a/app/views/dashboard/landing_page.html.erb
+++ b/app/views/dashboard/landing_page.html.erb
@@ -1,10 +1,11 @@
 <!-- Make sure all your bars are the first things in your <body> -->
 <header class="bar bar-nav">
-  <h1 class="title">Ratchet</h1>
+  <h1 class="title">Fairchild Tropical Botanic Garden</h1>
 </header>
 
 <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
 <div class="content">
+
   <p class="content-padded">Thanks for downloading Ratchet. This is an example HTML page that's linked up to compiled Ratchet CSS and JS, has the proper meta tags and the HTML structure. Need some more help before you start filling this with your own content? Check out some Ratchet resources:</p>
   <div class="card">
     <ul class="table-view">
@@ -30,4 +31,5 @@
       </li>
     </ul>
   </div>
+
 </div>
