--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -9,9 +9,26 @@ body.dashboard {
 
   &.landing_page {
 
-    .background-image {
-      zoom: 88%;
-      margin-left: -400px;
+    .container__body {
+      .background-image {
+        zoom: 88%;
+        margin-left: -400px;
+        opacity: .8;
+      }
+
+      .description {
+        position: absolute;
+        text-align: center;
+        top: 32%;
+        width: 100%;
+        padding: 1rem;
+        font-size: 32px;
+
+        h1, h4 {
+          color: $white;
+          word-wrap: break-word;
+        }
+      }
     }
 
     .container__foot {
@@ -19,22 +36,26 @@ body.dashboard {
       position: absolute;
       bottom: 0;
       width: 100%;
+
+      .login {
+        margin: 0;
+      }
     }
 
   }
 
   &.choose_challenge {
 
-    // Header
-    .content-padded {
-      margin: 0;
-      margin-top: 44px;
-    }
-
     .subheader {
       padding: 1rem;
       text-align: center;
       font-family: $font-family;
+      background-color: $primary-color;
+
+      h3 {
+        color: $white;
+        font-weight: $font-weight-normal;
+      }
     }
 
     .challenge__container {
