--- a/app/assets/stylesheets/global_mobile.css.scss
+++ b/app/assets/stylesheets/global_mobile.css.scss
@@ -5,6 +5,7 @@
  * Colors
  */
 $white: #FFFFFF;
+$black: #000000;
 
 $primary-color-dark:   #388E3C;
 $primary-color:        #4CAF50;
@@ -20,14 +21,32 @@ $divider-color:        #B6B6B6;
  */
 $font-family: 'Roboto', sans-serif;
 
+$font-weight-bold: 500;
+$font-weight-normal: 300;
 /**
  * Global base styles
  */
 body, html {
-  background-color: $primary-color;
+  background-color: $black;
 }
 
 div, span, body, html, h1, h2, h3, h4, p {
   font-family: $font-family;
   color: $primary-text-color;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 32px;
+}
+
+h4 {
+  font-size: 24px;
 }
