--- a/app/views/dashboard/landing_page.html.erb
+++ b/app/views/dashboard/landing_page.html.erb
@@ -1,9 +1,16 @@
 <div class="content-padded">
 
   <div class="container__body">
-    <img class="background-image" src="http://i.imgur.com/3oreVS5.jpg" />
-    <h1>GardenHunt</h1>
-    <h2>Lorem ipsum dolor sit amet</h2>
+
+    <div class="background-image">
+      <img src="http://i.imgur.com/3oreVS5.jpg" />
+    </div>
+
+    <div class="description">
+      <h1>GardenHunt</h1>
+      <h4>Scavenger hunt the garden</h4>
+    </div>
+
   </div>
 
   <div class="container__foot">
