--- a/app/assets/stylesheets/global_mobile.css.scss
+++ b/app/assets/stylesheets/global_mobile.css.scss
@@ -1,28 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700,500);
 @import "font-awesome";
+@import "global_mobile_variables";
 
-/**
- * Colors
- */
-$white: #FFFFFF;
-$black: #000000;
-
-$primary-color-dark:   #388E3C;
-$primary-color:        #4CAF50;
-$primary-color-light:  #C8E6C9;
-$primary-color-text:   #FFFFFF;
-$accent-color:         #8BC34A;
-$primary-text-color:   #212121;
-$secondary-text-color: #727272;
-$divider-color:        #B6B6B6;
-
-/**
- * Typography
- */
-$font-family: 'Roboto', sans-serif;
-
-$font-weight-bold: 500;
-$font-weight-normal: 300;
 /**
  * Global base styles
  */
