--- a/app/views/dashboard/choose_challenge.html.erb
+++ b/app/views/dashboard/choose_challenge.html.erb
@@ -1,4 +1,4 @@
-<div class="content-padded">
+<div class="content content-padded">
 
   <div class="subheader">
     <h3>Choose an adventure</h3>
@@ -10,8 +10,8 @@
 
       <% 10.times do %>
         <div class="challenge__item">
-          <img class="challenge__image" src="http://i.imgur.com/CveMZTU.jpg">
           <span class="challenge__desc">Flower Challenge</span>
+          <img class="challenge__image" src="http://i.imgur.com/CveMZTU.jpg">
         </div>
       <% end %>
 
