--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,13 +27,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Project name", "#", class: "navbar-brand" %>
+        <%= link_to "GardenHunt", "/admin", class: "navbar-brand" %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="<%= hunts_path %>">Hunts</a></li>
+          <li><a href="<%= tasks_path %>">Tasks</a></li>
         </ul>
       </div>
     </div>
