--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -15,3 +15,17 @@
  *= require global_mobile
  *= require dashboard
  */
+
+
+.progress-bar {
+  width: 100%;
+  height: 10px;
+  background-color: #eee;
+  border-radius: 4px;
+  margin-top: 16px;
+  overflow: hidden;
+}
+.progress-bar .progress {
+  height: 100%;
+  background-color: #4caf50;
+}
