--- a/app/views/dashboard/view_hunt.html.erb
+++ b/app/views/dashboard/view_hunt.html.erb
@@ -1,50 +1,79 @@
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClG3delsA9nPWuaYzJ_XJXYDyK8W4-Uc0" defer></script>
+
 <script>
   $(document).ready(function() {
     
+    var $body = $('body');
 
-    $.ajax({
-      url: '/dashboard/get_hunt_tasks',
-      data: { hunt_id: 3 }
-    }).done(function(tasks) {
-      
-      var map = new google.maps.Map(document.getElementById('map'), {
-        center: { lat: 25.6768691, lng: -80.2731083 },
-        zoom: 16,
-        mapTypeId: google.maps.MapTypeId.HYBRID
-      });
+    var map = new google.maps.Map(document.getElementById('map'), {
+      center: { lat: 25.6768691, lng: -80.2731083 },
+      zoom: 16,
+      mapTypeId: google.maps.MapTypeId.HYBRID
+    });
 
-      var markers = [];
+    var markers = [];
+    setMarkersOnMap(map);
 
-      $.each(tasks, function(i, task) {
 
-        var lat = parseFloat(task.geo.split(',')[0]);
-        var lng = parseFloat(task.geo.split(',')[1]);
+    function clearMarkers() {
+      for (var i = 0; i < markers.length; i++) {
+        markers[i].setMap(null);
+      }
+    }
 
-        markers.push({
-          position: { lat: lat, lng: lng },
-          map: map,
-          title: task.name,
-          taskName: task.name,
-          taskId: task.id
-        });
+    function setMarkersOnMap(map) {
 
-      });
+      $.ajax({
+        url: '/dashboard/get_hunt_tasks',
+        data: { hunt_id: 3 }
+      }).done(function(data) {
 
-      $.each(markers, function(i, marker) {
+        console.log(data);
 
-        var gMarker = new google.maps.Marker(marker);
+        var total_tasks = data.tasks.length;
+        var total_tasks_done = data.done_task_ids.length;
+        var total_percent_done = Math.ceil(total_tasks_done / total_tasks * 100)
+        $('.progress-bar .progress').css('width', total_percent_done+'%');
 
-        gMarker.addListener('click', function() {
-          
-          $('#show-task-view h1.title').html(marker.taskName);
 
-          $.ajax({
-            url: '/dashboard/get_task_view',
-            data: { task_id: marker.taskId }
-          }).done(function(task_html_partial) {
+        clearMarkers();
+
+        $.each(data.tasks, function(i, task) {
+
+          var lat = parseFloat(task.geo.split(',')[0]);
+          var lng = parseFloat(task.geo.split(',')[1]);
+
+          if( data.done_task_ids.indexOf(task.id) > -1 ) {
+            var markerIcon = 'http://maps.google.com/mapfiles/ms/icons/green-dot.png';
+          } else {
+            var markerIcon = 'http://maps.google.com/mapfiles/ms/icons/red-dot.png';
+          }
+
+          var markerData = {
+            position: { lat: lat, lng: lng },
+            map: map,
+            title: task.name,
+            taskName: task.name,
+            taskId: task.id,
+            icon: markerIcon
+          };
+
+          var marker = new google.maps.Marker(markerData);
+          markers.push(marker);
+
+          marker.addListener('click', function() {
             
-            $('#show-task-view .content').html(task_html_partial);
-            $('#show-task-view').addClass('active');
+            $('#show-task-view h1.title').html(markerData.taskName);
+
+            $.ajax({
+              url: '/dashboard/get_task_view',
+              data: { task_id: markerData.taskId }
+            }).done(function(task_html_partial) {
+              
+              $('#show-task-view .content').html(task_html_partial);
+              $('#show-task-view').addClass('active');
+
+            });
 
           });
 
@@ -52,9 +81,31 @@
 
       });
 
+    }
+
+    // mark task as done
+    $body.on('click', 'button.js-mark-as-done', function(e) {
+      e.preventDefault();
+
+      var $button = $(this);
+
+      if( $button.hasClass('disabled') )
+        return false;
+
+      $button.addClass('disabled');
+
+      $.ajax({
+        type: 'POST',
+        url: '/dashboard/mark_task_as_done',
+        data: { 
+          task_id: $button.data('task-id') 
+        }
+      }).done(function(task_html_partial) {
+        $('#show-task-view .content').html(task_html_partial);
+        setMarkersOnMap(map);
+      });
 
     });
-
 
   });
 
@@ -111,8 +162,6 @@
   }
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClG3delsA9nPWuaYzJ_XJXYDyK8W4-Uc0" async defer></script>
-
 <!-- Make sure all your bars are the first things in your <body> -->
 <header class="bar bar-nav">
   <h1 class="title"><%= @hunt.name %></h1>
@@ -126,7 +175,11 @@
 </div>
 
 <div class="bar bar-standard bar-footer">
-  Progress goes here..
+  
+  <div class="progress-bar">
+    <div class="progress"></div>
+  </div>
+
 </div>
 
 
