--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -16,16 +16,29 @@
  *= require dashboard
  */
 
-
+.location {
+  float: left;
+  width: 10%;
+  text-align: center;
+  margin-right: 2%;
+}
 .progress-bar {
-  width: 100%;
+  width: 88%;
   height: 10px;
   background-color: #eee;
   border-radius: 4px;
   margin-top: 16px;
   overflow: hidden;
+  float: left;
 }
 .progress-bar .progress {
   height: 100%;
   background-color: #4caf50;
+}
+
+// #map {
+//   padding-bottom: 44px;
+// }
+body.dashboard.view_hunt > .content {
+  padding-bottom: 44px;
 }
