--- a/app/views/dashboard/view_hunt.html.erb
+++ b/app/views/dashboard/view_hunt.html.erb
@@ -31,11 +31,6 @@
     // onSuccess Geolocation
     //
     function onSuccess(position) {
-        
-      var str = 'Latitude: '  + position.coords.latitude      + '<br>' +
-                'Longitude: ' + position.coords.longitude     + '<br>' +
-                'Timestamp: ' + position.timestamp     + '<br>\r\n' ;
-      console.log(str);
 
       var currentLocationMarkerData = {
         position: { lat: position.coords.latitude, lng: position.coords.longitude },
@@ -161,9 +156,22 @@
           task_id: $button.data('task-id') 
         }
       }).done(function(task_html_partial) {
-        $('#show-task-view .content').html(task_html_partial);
         setMarkersOnMap(map);
+        $('#show-task-view').removeClass('active');
       });
+
+    });
+
+    $body.on('click', 'a.js-show-current-location', function(e) {
+      e.preventDefault();
+
+      if( currentLocationMarker != null ) {
+
+        var center = new google.maps.LatLng(currentLocationMarker.position.lat(), currentLocationMarker.position.lng());
+        map.panTo(center);
+
+      }
+
 
     });
 
@@ -185,6 +193,12 @@
 
 <div class="bar bar-standard bar-footer">
   
+  <div class="location">
+    <a href="#" class="btn btn-link js-show-current-location">
+      <i class="fa fa-location-arrow"></i>
+    </a>
+  </div>
+
   <div class="progress-bar">
     <div class="progress"></div>
   </div>
