--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= stub 'globals'
  *= stub 'mobile'
- *= stub 'global_mobile'
+ *= stub 'dashboard'
  */
