--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,4 +1,4 @@
-@import "global_mobile_variables";
+@import "global_variables";
 
 body.dashboard {
 
@@ -13,6 +13,7 @@ body.dashboard {
         zoom: 88%;
         margin-left: -400px;
         opacity: .8;
+        overflow: hidden;
       }
 
       .description {
