--- a/app/views/hunts/index.html.erb
+++ b/app/views/hunts/index.html.erb
@@ -3,10 +3,11 @@
     <span class="glyphicon glyphicon-plus"></span>
     New Hunt
   <% end %>
-  <h1>Listing hunts</h1>
+  <h1>Hunt Listings</h1>
 </div>
+
 <div class="row">
-  <%= content_tag_for(:tr, @hunts) do |hunt| %>
+  <%= @hunts.each do |hunt| %>
     <div class="col-md-4 col-sm-6 col-xs-12">
       <div class="hunt___container">
         <div class="hunt__name">
