--- a/app/views/hunts/index.html.erb
+++ b/app/views/hunts/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row">
-  <%= @hunts.each do |hunt| %>
+  <% @hunts.each do |hunt| %>
     <div class="col-md-4 col-sm-6 col-xs-12">
       <div class="hunt___container">
         <div class="hunt__name">
