--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row">
-  <%= @tasks.each do |task| %>
+  <% @tasks.each do |task| %>
     <div class="col-md-4 col-sm-6 col-xs-12">
       <div class="task___container">
         <div class="task__name">
