--- a/app/views/dashboard/view_hunt.html.erb
+++ b/app/views/dashboard/view_hunt.html.erb
@@ -8,7 +8,8 @@
     var map = new google.maps.Map(document.getElementById('map'), {
       center: { lat: 25.6768691, lng: -80.2731083 },
       zoom: 16,
-      mapTypeId: google.maps.MapTypeId.HYBRID
+      mapTypeId: google.maps.MapTypeId.HYBRID,
+      disableDefaultUI: true
     });
 
     var watchID = null;
