--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -14,6 +14,11 @@ body.dashboard {
         margin-left: -400px;
         opacity: .8;
         overflow: hidden;
+        display: block;
+
+        @media (min-width: 448px) {
+          display: none;
+        }
       }
 
       .description {
@@ -27,6 +32,10 @@ body.dashboard {
         h1, h4 {
           color: $white;
           word-wrap: break-word;
+
+          @media (min-width: 448px) {
+            color: $primary-text-color;
+          }
         }
       }
     }
