--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -4,9 +4,21 @@
     height: 400px;
     background-color: #CCC;
   }
+
+  .taskImg {
+    height: 500px;
+    width: 500px;
+  }
+
+  .error {
+    display: none;
+    background-color: #f2dede;
+    border-radius: 5px;
+    padding: 2px;
+  }
 </style>
 
-<%= form_for(@task, html: { class: "form-horizontal", role: "form" }) do |f| %>
+<%= form_for(@task, html: { class: "form-horizontal input-group", role: "form" }) do |f| %>
   <% if @task.errors.any? %>
     <div class="alert alert-danger alert-dismissable" role="alert">
       <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -24,19 +36,27 @@
     <%= f.label :name, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :name, class: "form-control" %>
+      <button name="search" class="btn btn-primary" type="button" style="margin-top: 5px">Search</button>
+       <div class="error badge-negative">Not found. Please try a different name</div>
     </div>
   </div>
-  <button name="search" type="button">Search</button>
-
-  <div class="form-group">
+  
+  <div class="form-group ">
     <%= f.label :geo, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :geo, class: "form-control" %>
     </div>
   </div>
 
-  <div id="map"></div>
-  <img src="<% :image %>">
+  <div class="form-group ">
+    <label>Map</label>
+    <div id="map"></div>
+  </div>
+  
+  <div class="form-group ">
+    <label>Image</label>
+    <img src="<%= @task.image %>" class="taskImg">
+  </div>
 
   <div class="form-group">
     <%= f.label :claim_type, class: "col-sm-2 control-label" %>
@@ -118,7 +138,9 @@ $(document).ready(function() {
   var descr = $('textarea[name="task[description]"]');
   var imgUrl = $('input[name="task[image]"]');
   var name = $('input[name="task[name]"]');
+  var errorDiv = $('.error');
   search.on('click', function(evt) {
+    errorDiv.hide();
     $.get('/search_wiki?query=' + name.val(), function(data) {
       if (data['success']) {
         img.attr('src', data['image']);
@@ -126,6 +148,11 @@ $(document).ready(function() {
         var descrObj = data['excerpt']['query']['pages'];
         var key = Object.keys(descrObj)[0];
         descr.val(descrObj[key]['extract']);
+      } else {
+        errorDiv.show();
+        descr.val('');
+        imgUrl.val('');
+        img.attr('src', '');
       }
     });
   });
