--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -21,7 +21,7 @@
   <dd><%= @task.claim_type %></dd>
 
   <dt>Image:</dt>
-  <dd><%= image_tag "#{@task.image}" %></dd>
+  <dd class="task__image"><%= image_tag "#{@task.image}" %></dd>
 
   <dt>Hunt:</dt>
   <dd><%= @task.hunt_id %></dd>
