--- a/app/views/dashboard/view_hunt.html.erb
+++ b/app/views/dashboard/view_hunt.html.erb
@@ -175,7 +175,8 @@
 
     });
 
-    $body.on('click', '.js-open-task', function(e) {
+    $body.on('click', 'a.js-open-task', function(e) {
+      e.preventDefault();
 
       var $button = $(this);
       var taskId = $(this).data('task-id');
@@ -196,14 +197,14 @@
     $body.on('click', '.js-toggle-map-list', function(e) {
       e.preventDefault();
 
-      if( $(this).data('data-showing') == 'map' ) {
+      if( $(this).data('showing') == 'map' ) {
         $('.show-map-view').hide();
         $('.show-list-view').show();
-        $(this).data('data-showing', 'list').html('Map');
+        $(this).data('showing', 'list').html('Map');
       } else {
         $('.show-list-view').hide();
         $('.show-map-view').show();
-        $(this).data('data-showing', 'map').html('List');
+        $(this).data('showing', 'map').html('List');
       }
 
     });
@@ -216,9 +217,9 @@
 <header class="bar bar-nav">
   <a href="/challenge" class="icon icon-left-nav pull-left" data-ignore="push"></a>
   <h1 class="title"><%= @hunt.name %></h1>
-  <button class="btn pull-right js-toggle-map-list" data-showing="map">
+  <a href="#" class="btn pull-right js-toggle-map-list" data-showing="map" data-ignore="push">
     List
-  </button>
+  </a>
 </header>
 
 <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
@@ -232,15 +233,17 @@
     <ul class="table-view">
 
       <% @hunt.tasks.each do |task| %>
-        <li class="table-view-cell js-open-task" data-task-id="<%= task.id %>">
-          <% if @done_task_ids.include?(task.id) %>
-            <span class="badge badge-positive">Done</span>
-          <% else %>
-            <span class="badge badge-primary">Missing</span>
-          <% end %>
-          <span class="task-name">
-            <%= task.name %> 
-          </span>
+        <li class="table-view-cell js-open-task">
+          <a href="#" class="js-open-task" data-task-id="<%= task.id %>" data-ignore="push">
+            <% if @done_task_ids.include?(task.id) %>
+              <span class="badge badge-positive">Done</span>
+            <% else %>
+              <span class="badge badge-primary">Missing</span>
+            <% end %>
+            <span class="task-name">
+              <%= task.name %> 
+            </span>
+          </a>
         </li>
       <% end %>
 
