--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -16,6 +16,14 @@
  *= require dashboard
  */
 
+
+#confetti {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  z-index: 1; 
+  width: 100%;
+}
 .location {
   float: left;
   width: 10%;
