--- a/app/views/dashboard/view_hunt.html.erb
+++ b/app/views/dashboard/view_hunt.html.erb
@@ -1,6 +1,131 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClG3delsA9nPWuaYzJ_XJXYDyK8W4-Uc0" defer></script>
 
 <script>
+
+  function show_confetti() {
+
+    $('body > .content').prepend('<canvas id="confetti"></canvas>');
+    console.log('insert dom');
+
+    console.log('show_confetti()');
+
+    var COLORS, Confetti, NUM_CONFETTI, PI_2, canvas, confetti, context, drawCircle, i, range, resizeWindow, xpos;
+
+    NUM_CONFETTI = 350;
+
+    COLORS = [[85, 71, 106], [174, 61, 99], [219, 56, 83], [244, 92, 68], [248, 182, 70]];
+
+    PI_2 = 2 * Math.PI;
+
+    canvas = document.getElementById("confetti");
+
+    context = canvas.getContext("2d");
+
+    window.w = canvas.width = window.innerWidth;
+
+    window.h = canvas.height = ($('body > .content').height() + 88);
+
+    // resizeWindow = function() {
+    //   window.w = canvas.width = window.innerWidth;
+    //   return window.h = canvas.height = ($('body > .content').height() + 88);
+    // };
+
+    // window.addEventListener('resize', resizeWindow, false);
+
+    // window.onload = function() {
+    //   return setTimeout(resizeWindow, 0);
+    // };
+
+    range = function(a, b) {
+      return (b - a) * Math.random() + a;
+    };
+
+    drawCircle = function(x, y, r, style) {
+      context.beginPath();
+      context.arc(x, y, r, 0, PI_2, false);
+      context.fillStyle = style;
+      return context.fill();
+    };
+
+    xpos = 0.5;
+
+    document.onmousemove = function(e) {
+      return xpos = e.pageX / w;
+    };
+
+    window.requestAnimationFrame = (function() {
+      return window.requestAnimationFrame || window.webkitRequestAnimationFrame || window.mozRequestAnimationFrame || window.oRequestAnimationFrame || window.msRequestAnimationFrame || function(callback) {
+        return window.setTimeout(callback, 1000 / 60);
+      };
+    })();
+
+    Confetti = (function() {
+      function Confetti() {
+        this.style = COLORS[~~range(0, 5)];
+        this.rgb = "rgba(" + this.style[0] + "," + this.style[1] + "," + this.style[2];
+        this.r = ~~range(2, 6);
+        this.r2 = 2 * this.r;
+        this.replace();
+      }
+
+      Confetti.prototype.replace = function() {
+        this.opacity = 0;
+        this.dop = 0.03 * range(1, 4);
+        this.x = range(-this.r2, w - this.r2);
+        this.y = range(-20, h - this.r2);
+        this.xmax = w - this.r;
+        this.ymax = h - this.r;
+        this.vx = range(0, 2) + 8 * xpos - 5;
+        return this.vy = 0.7 * this.r + range(-1, 1);
+      };
+
+      Confetti.prototype.draw = function() {
+        var ref;
+        this.x += this.vx;
+        this.y += this.vy;
+        this.opacity += this.dop;
+        if (this.opacity > 1) {
+          this.opacity = 1;
+          this.dop *= -1;
+        }
+        if (this.opacity < 0 || this.y > this.ymax) {
+          this.replace();
+        }
+        if (!((0 < (ref = this.x) && ref < this.xmax))) {
+          this.x = (this.x + this.xmax) % this.xmax;
+        }
+        return drawCircle(~~this.x, ~~this.y, this.r, this.rgb + "," + this.opacity + ")");
+      };
+
+      return Confetti;
+
+    })();
+
+    confetti = (function() {
+      var j, ref, results;
+      results = [];
+      for (i = j = 1, ref = NUM_CONFETTI; 1 <= ref ? j <= ref : j >= ref; i = 1 <= ref ? ++j : --j) {
+        results.push(new Confetti);
+      }
+      return results;
+    })();
+
+    window.step = function() {
+      var c, j, len, results;
+      requestAnimationFrame(step);
+      context.clearRect(0, 0, w, h);
+      results = [];
+      for (j = 0, len = confetti.length; j < len; j++) {
+        c = confetti[j];
+        results.push(c.draw());
+      }
+      return results;
+    };
+
+    step();
+
+  }
+
   $(document).ready(function() {
     
     var $body = $('body');
@@ -81,13 +206,17 @@
 
       $.ajax({
         url: '/dashboard/get_hunt_tasks',
-        data: { hunt_id: 3 }
+        data: { hunt_id: <%= params[:hunt] %> }
       }).done(function(data) {
 
         var total_tasks = data.tasks.length;
         var total_tasks_done = data.done_task_ids.length;
-        var total_percent_done = Math.ceil(total_tasks_done / total_tasks * 100)
+        var total_percent_done = Math.ceil(total_tasks_done / total_tasks * 100);
         $('.progress-bar .progress').css('width', total_percent_done+'%');
+
+        if( total_percent_done == 100 ) {
+          show_confetti();
+        }
 
         clearMarkers();
 
