--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -32,11 +32,13 @@
     </div>
   <% end %>
 
-  <div class="form-group">
+  <div class="form-group" >
     <%= f.label :name, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :name, class: "form-control" %>
-      <button name="search" class="btn btn-primary" type="button" style="margin-top: 5px">Search</button>
+    <div class="col-md-10">
+      <span class="form-inline" style="display:inline-block;">
+        <%= f.text_field :name, class: "form-control" %>
+        <button name="search" class="btn btn-primary" type="button" style="margin-top: 5px">Search</button>
+      </span>
        <div class="error badge-negative">Not found. Please try a different name</div>
     </div>
   </div>
