--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -13,7 +13,7 @@
 
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Starter Template for Bootstrap</title>
+  <title>Fairchild GardenHunt</title>
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
