--- a/app/views/dashboard/landing_page.html.erb
+++ b/app/views/dashboard/landing_page.html.erb
@@ -3,11 +3,10 @@
   <div class="container__body">
 
     <div class="background-image">
-      <img src="http://i.imgur.com/3oreVS5.jpg" />
     </div>
 
     <div class="description">
-      <h1>GardenHunt</h1>
+      <h1 class="logo">Fairchild Tropical Botanic Garden</h1>
       <h4>Scavenger hunt the garden</h4>
     </div>
 
@@ -16,7 +15,7 @@
   <div class="container__foot">
     <a href="<%= signin_path %>" class="btn btn-primary btn-block login" data-ignore="push">
       <i class="fa fa-facebook-official"></i>
-      Signup with Facebook
+      Start Playing!
     </a>
   </div>
 
