--- a/app/views/hunts/show.html.erb
+++ b/app/views/hunts/show.html.erb
@@ -22,7 +22,7 @@
 
 <table class="table">
   <th>Task Name</th>
-  <%= @hunt.tasks.each do |task| %>
+  <% @hunt.tasks.each do |task| %>
     <tr>
       <td>
         <%= task.name %>
