--- a/app/views/dashboard/choose_challenge.html.erb
+++ b/app/views/dashboard/choose_challenge.html.erb
@@ -1,8 +1,11 @@
-<div class="content content-padded">
+<header class="bar bar-nav">
+  <h1 class="title">Choose a challenge</h1>
+  <a href="/signout" class="btn pull-right" data-ignore="push">
+    Log Out
+  </a>
+</header>
 
-  <div class="subheader">
-    <h3>Choose an adventure</h3>
-  </div>
+<div class="content content-padded">
 
   <div class="challenge__container">
 
