--- a/app/views/dashboard/view_hunt.html.erb
+++ b/app/views/dashboard/view_hunt.html.erb
@@ -344,7 +344,9 @@
 
 <!-- Make sure all your bars are the first things in your <body> -->
 <header class="bar bar-nav">
-  <a href="/challenge" class="icon icon-left-nav pull-left" data-ignore="push"></a>
+  <a href="/challenge" class="btn pull-left" data-ignore="push">
+    Challenges
+  </a>
   <h1 class="title"><%= @hunt.name %></h1>
   <a href="#" class="btn pull-right js-toggle-map-list" data-showing="map" data-ignore="push">
     List
