--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -5,16 +5,47 @@
     background-color: #CCC;
   }
 
-  .taskImg {
-    height: 500px;
-    width: 500px;
-  }
-
   .error {
     display: none;
     background-color: #f2dede;
     border-radius: 5px;
     padding: 2px;
+  }
+
+  .form-group {
+    border-bottom: 1px solid #eeeeee;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 50%;
+    margin: 0;
+  }
+
+  .form-horizontal {
+    width:100%;
+  }
+
+  .search {
+    float:right;
+  }
+
+  .form-control {
+    float: right;
+  }
+
+  .control-label {
+    float: left;
+    text-align: left;
+    padding-left: 0px;
+  }
+
+  .block-right {
+    float: right;
+    height: 500px;
+    width: 500px;
+  }
+
+  .text-area {
+    height: 200px;
   }
 </style>
 
@@ -32,59 +63,58 @@
     </div>
   <% end %>
 
-  <div class="form-group" >
-    <%= f.label :name, class: "col-sm-2 control-label" %>
-    <div class="col-md-10">
-      <span class="form-inline" style="display:inline-block;">
-        <%= f.text_field :name, class: "form-control" %>
-        <button name="search" class="btn btn-primary" type="button" style="margin-top: 5px">Search</button>
-      </span>
-       <div class="error badge-negative">Not found. Please try a different name</div>
+  <div class="form-group">
+    <div class="error">Not found. Please try a different name</div>
+    <%= f.label :name, class: "control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :name, class: "form-control" %>
+      <button name="search" class="btn btn-primary search" type="button" style="margin-top: 5px">Search</button>
     </div>
   </div>
+     
   
   <div class="form-group ">
-    <%= f.label :geo, class: "col-sm-2 control-label" %>
+    <%= f.label :geo, class: "control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :geo, class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group ">
-    <label>Map</label>
-    <div id="map"></div>
+    <label class="control-label">Map</label>
+    <div id="map" class="block-right"></div>
   </div>
   
   <div class="form-group ">
-    <label>Image</label>
-    <img src="<%= @task.image %>" class="taskImg">
+    <label class="control-label">Image</label>
+    <img src="<%= @task.image %>" class="block-right">
   </div>
 
   <div class="form-group">
-    <%= f.label :claim_type, class: "col-sm-2 control-label" %>
+    <%= f.label :claim_type, class: " control-label" %>
     <div class="col-sm-10">
       <%= f.select :claim_type, options_for_select(Task.claim_types), {}, class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label "Image Url", class: "col-sm-2 control-label" %>
+    <%= f.label "Image Url", class: " control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :image, class: "form-control" %>
     </div>
   </div>
   
   <div class="form-group">
-    <%= f.label :hunt_id, class: "col-sm-2 control-label" %>
+    <%= f.label :hunt_id, class: " control-label" %>
     <div class="col-sm-10">
       <%= f.select :hunt_id, options_for_select(Task.hunt_options), {}, class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :description, class: "col-sm-2 control-label" %>
+    <%= f.label :description, class: " control-label" %>
     <div class="col-sm-10">
-      <%= f.text_area :description, class: "form-control" %>
+      <%= f.text_area :description, class: "form-control text-area" %>
     </div>
   </div>
 
