--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -77,7 +77,7 @@
   <div class="form-group">
     <%= f.label :hunt_id, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.select :hunt_id, options_for_select(Task.hunt_options), {}, class: "form-control" %>
+      <%= f.select :hunt_id, options_for_select(Task.hunt_options, @task.default_hunt_option), {}, class: "form-control" %>
     </div>
   </div>
 
