--- a/app/views/dashboard/_task_view.html.erb
+++ b/app/views/dashboard/_task_view.html.erb
@@ -2,7 +2,7 @@
   <img src="<%= @task.image %>" alt="" style="width: 100%;" />
 </div>
 <div class="description content-padded">
-	<%= @task.description %>
+	<p><%= @task.description %></p>
 </div>
 
 <div class="cta">
